a11y atspi: Make some AtSpiAdaptor helpers static

This will allow reuse in an upcoming commit.

Task-number: QTBUG-139334
Change-Id: Ib1dce4b1a97c8f21f5302c0a8a67945613241ee1
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>