src/gui/accessible/linux/atspiadaptor_p.h
@@ -79,19 +79,20 @@ private:
 
     void sendReply(const QDBusConnection &connection, const QDBusMessage &message, const QVariant &argument) const;
 
-    QAccessibleInterface *interfaceFromPath(const QString& dbusPath) const;
-    QString pathForInterface(QAccessibleInterface *interface) const;
-    QString pathForObject(QObject *object) const;
+    static QAccessibleInterface *interfaceFromPath(const QString &dbusPath);
+    static QString pathForInterface(QAccessibleInterface *interface);
+    static QString pathForObject(QObject *object);
 
     void notifyStateChange(QAccessibleInterface *interface, const QString& state, int value);
 
     void sendAnnouncement(QAccessibleAnnouncementEvent *event);
 
     // accessible helper functions
-    AtspiRole getRole(QAccessibleInterface *interface) const;
-    QSpiAttributeSet getAttributes(QAccessibleInterface *) const;
-    QSpiRelationArray relationSet(QAccessibleInterface *interface, const QDBusConnection &connection) const;
-    QStringList accessibleInterfaces(QAccessibleInterface *interface) const;
+    static AtspiRole getRole(QAccessibleInterface *interface);
+    static QSpiAttributeSet getAttributes(QAccessibleInterface *);
+    static QSpiRelationArray relationSet(QAccessibleInterface *interface,
+                                         const QDBusConnection &connection);
+    static QStringList accessibleInterfaces(QAccessibleInterface *interface);
 
     // component helper functions
     static QRect getExtents(QAccessibleInterface *interface, uint coordType);
@@ -103,10 +104,12 @@ private:
     QSpiActionArray getActions(QAccessibleInterface *interface) const;
 
     // text helper functions
-    QVariantList getAttributes(QAccessibleInterface *, int offset, bool includeDefaults) const;
-    QString getAttributeValue(QAccessibleInterface *, int offset, const QString &attributeName) const;
-    QList<QVariant> getCharacterExtents(QAccessibleInterface *, int offset, uint coordType) const;
-    QList<QVariant> getRangeExtents(QAccessibleInterface *, int startOffset, int endOffset, uint coordType) const;
+    static QVariantList getAttributes(QAccessibleInterface *, int offset, bool includeDefaults);
+    static QString getAttributeValue(QAccessibleInterface *, int offset,
+                                     const QString &attributeName);
+    static QList<QVariant> getCharacterExtents(QAccessibleInterface *, int offset, uint coordType);
+    static QList<QVariant> getRangeExtents(QAccessibleInterface *, int startOffset, int endOffset,
+                                           uint coordType);
     static QAccessible::TextBoundaryType qAccessibleBoundaryTypeFromAtspiBoundaryType(int atspiTextBoundaryType);
     static bool isValidAtspiTextGranularity(uint coordType);
     static QAccessible::TextBoundaryType qAccessibleBoundaryTypeFromAtspiTextGranularity(uint atspiTextGranularity);
